// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupMenu should render default element 1`] = `
<ContentContainer
  fill={false}
  footer={<ActionFooter />}
>
  <div
    className="container"
  >
    <div
      className="content-header"
    >
      <ul
        className="utility-list"
        role="listbox"
      />
    </div>
  </div>
</ContentContainer>
`;

exports[`PopupMenu should render prop data 1`] = `
<ContentContainer
  fill={false}
  footer={
    <div>
      my-footer
    </div>
  }
  header={
    <div>
      my-header
    </div>
  }
>
  <div
    className="container"
  >
    <div
      className="content-header"
    >
      <div
        className="custom-content-container"
      >
        <div>
          my-custom-content
        </div>
      </div>
      <PopupMenuUser
        userConfig={
          Object {
            "detail": "user-detail",
            "imageSrc": "user-src",
            "initials": "user-initials",
            "name": "user-name",
          }
        }
      />
      <ul
        className="utility-list"
        role="listbox"
      >
        <PopupMenuListItem
          icon={
            <span>
              my icon
            </span>
          }
          isSelected={true}
          key="my-test-key"
          notificationCount={2}
          onSelect={[Function]}
          showSelections={true}
          text="test-text"
        />
      </ul>
    </div>
  </div>
</ContentContainer>
`;

exports[`PopupMenu should render with height bounded 1`] = `
<ContentContainer
  fill={true}
  footer={
    <div>
      my-footer
    </div>
  }
  header={
    <div>
      my-header
    </div>
  }
>
  <div
    className="container"
  >
    <div
      className="content-header"
    >
      <ul
        className="utility-list"
        role="listbox"
      />
    </div>
  </div>
</ContentContainer>
`;
